# 8872-extractor

./: 8872-141677_a.csv  8872-141677_b.csv  Dockerfile  Makefile  app.py  pyproject.toml  requirements-dev.txt  requirements.txt  selecto_a.csv  selecto_b.csv
extract8872/: __init__.py  helpers.py
extract8872/static/styles/: styles.css
extract8872/templates/: download.html  drop.html  index.html
tests/: test_gunicorn.py
