[tool.poetry]
name = "extract-8872"
version = "0.1.0"
description = ""
authors = ["Andy Friedman <afriedman412@gmail.com>"]
readme = "README.md"
packages = [{include = "extract8872"}]

[tool.poetry.dependencies]
python = "^3.11"
pdfplumber = "^0.10.2"
pandas = "^2.1.0"
flask = "^2.3.3"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
